--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- HERO HTML GOES HERE -->
     <div class="site-hero">
       <div class="hero-text">
-        <img src="web_portal2/images/Dark Space Theme Creative Portfolio Presentation.jpg" alt="">
+        <img src="web_portal2/images/landscape.jpg" alt="">
         <!-- <h1>Creative Designs by April Moody-Jennings</h1>
         <p class="title">Portfolio 2022-2023</p> -->
        
